[metadata]
name=geedatasets
description=create datasets from Google Earth Engine
author = raul ramos
author_email = raul.ramos@udea.edu.co
licence = MIT
description_file=README.md
license_files=LICENSE.txt
long_description = file: README.md
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/rramosp/geedatasets

